fix to align artworkInfoTable

--- a/src/App.css
+++ b/src/App.css
@@ -397,7 +397,7 @@ body {
   grid-area: 3 / 8 / 17 / 14;
   
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(14, 5.56vh); 
+  grid-template-rows: repeat(15, 5.56vh); 
 
   overflow-x: hidden;
   overflow-y: scroll;
@@ -424,14 +424,16 @@ td:nth-child(22){
 td:nth-child(24){
   color: black;
 }
-
+.span1-row{
+  grid-row-end: span 1;
+}
 .span2-row{
   grid-row-end: span 2;
   }
-  .span3-row{
+.span3-row{
     grid-row-end: span 3;
   }
-  .span4-row{
+.span4-row{
     grid-row-end: span 4;
   }
 
